--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,11 @@
         <!-- Where log files live -->
         <demo.log.dir>${user.home}/var/log/demo</demo.log.dir>
 
-        <!-- Always build in production mode -->
+        <!-- Whether to build in production mode -->
         <vaadin.productionMode>true</vaadin.productionMode>
+
+        <!-- What port to run Jetty on -->
+        <jetty.http.port>8090</jetty.http.port>
 
         <!-- Other stuff -->
         <checkstyle.config.location>src/checkstyle/checkstyle.xml</checkstyle.config.location>
@@ -39,7 +42,7 @@
         <guava.version>29.0-jre</guava.version>
         <hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
         <javax.el.version>3.0.1-b11</javax.el.version>
-        <jetty.maven.plugin.version>9.4.44.v20210927</jetty.maven.plugin.version>
+        <jetty.maven.plugin.version>9.4.45.v20220203</jetty.maven.plugin.version>
         <log4j.version>1.2.17</log4j.version>
         <maven.checkstyle.plugin.version>3.0.0</maven.checkstyle.plugin.version>
         <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
@@ -59,6 +62,19 @@
 
     </properties>
 
+    <repositories>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
 
         <!-- Vaadin -->
@@ -70,16 +86,20 @@
                     <groupId>com.vaadin</groupId>
                     <artifactId>fusion-endpoint</artifactId>
                 </exclusion>
+            <!-- -->
                 <exclusion>
                     <groupId>com.vaadin</groupId>
                     <artifactId>vaadin-dev-server</artifactId>
                 </exclusion>
+            <!-- -->
             </exclusions>
         </dependency>
+    <!-- -->
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>flow-server-production-mode</artifactId>
         </dependency>
+    <!-- -->
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring</artifactId>
@@ -224,6 +244,19 @@
     <build>
 
         <plugins>
+
+            <!-- Jetty -->
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty.maven.plugin.version}</version>
+                 <configuration>
+                    <httpConnector>
+                        <host>localhost</host>
+                        <port>${jetty.http.port}</port>
+                    </httpConnector>
+                </configuration>
+            </plugin>
 
             <!-- Maven enforcer -->
             <plugin>
@@ -375,12 +408,7 @@
                 </configuration>
             </plugin>
 
-            <!--
-                Vaadin plugin.
-
-                Takes care of synchronizing java dependencies and imports in "package.json"
-                and "main.js" files. It also creates webpack.config.js if needed.
-            -->
+            <!-- Vaadin plugin -->
             <plugin>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-maven-plugin</artifactId>
